# Condution

./: .babelrc  .floo  .flooignore  .gitignore  .gitmodules  .travis.yml  404.html  CMakeLists.txt  CNAME  CODE_OF_CONDUCT.md  CondutionEngine.js  Mockup_Full.ai  README  README.md  \  _config.yml  about.html  app.html  asset-manifest.json  auth.html  capacitor.config.json  config.sh  decrypt.sh  index.html  ionic.config.json  justfile  main.js  next.config.js  package-lock.json  package-lock.old.json  package.json  precache-manifest.027268bdb85374e21975563c847d71f3.js  precache-manifest.06a1ad2bb7a61d0c3d7f4eb9b1738fd2.js  precache-manifest.07e3863bc860403230c7ae9af6e10309.js  precache-manifest.09eb7768265137509526ca8f24b9f6c7.js  precache-manifest.0c715c28a23c5d1a7e1d241ce92defea.js  precache-manifest.0e6e39982f2dbb20e554ea65365a7dc1.js  precache-manifest.0f044074ec97acd86a93405a587ccc4b.js  precache-manifest.1150011fe50c8d76f3c4a3688acad0eb.js  precache-manifest.149fc805e1847fd8cfc7fd4a0250b13c.js  (+198 more)
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation_request.md  feature_request.md
.github/workflows/: awsci.yml  betaci.yml  desktopci.yml  digitalmicah.yml  docspublish.yml  mobileci.yml  smoke.yml
.secrets/: env.gpg  id_rsa.gpg  playstore_creds.json.gpg  secrets.json.gpg  upload.jks.gpg
Condution/: =  capacitor.config.json  ionic.config.json  main.js  package-lock.json  package.json
Condution/public/: index.html
Condution/src/: App.jsx  gruntman.js
__MACOSX/: ._pack
android/: build.gradle  capacitor.settings.gradle  gradle.properties  variables.gradle
android/app/: build.gradle  capacitor.build.gradle
android/capacitor-cordova-android-plugins/: build.gradle  (+1 more)
api/: Bridge.ts  CondutionCore.js  CondutionCore.wasm  CondutionEngine.js  CondutionEngine.ts  scratch.js
components/: BlkArt.jsx  Calendar.jsx  CalendarPopover.jsx  ContextWizard.js  FirstInteraction.jsx  GuttedTask.jsx  Repeat.jsx  TagEditor.jsx  TagsInput.jsx
css/: app.css  index.css
electron/: .gitignore  main.js  package.json
fastlane/: Appfile  Fastfile  Matchfile  Preview.html  README.md  report.xml
js/: APIServer.js  CacheManager.js  FirebaseManager.js  PerspectiveManager.js  app.js  auth.js  index.js  jquery-ui-timepicker-addon.js
lib/: Globals.hpp  Task.hpp
mocks/: BetaTeaser.ai  CondutionBanner.ai  Condution_Identity.ai  Identity.ai  Logo.ai  LogoDMG.ai  Logo_SizeAdjusted.ai  Mobile-NewLogo-background.icns  Mobile-NewLogo.ai  Mobile_Logo.ai  Mockup.ai  RepoCard.ai  SoftLogo.ai  Splash.ai  condution thxgvg.ai  dark.psd  splash-new.ai
old/: build.zsh  gruntman.js  main.js  package.json
pages/: 404.js  _app.js  index.js
public/: index.html
resources/: icon.icns
scripts/: .gitignore  JSONServer.js  package.json
src/: App.js  App.jsx  Bridge.cpp  Bridge.js  BridgeGlue.js  CondutionEngine.ts  DBManager.js  FirebaseManager.js  ObjectManager.js  PerspectiveManager.js  Task.cpp  Widget.ts  about.html  app.html  auth.html  gruntman.js  index.css  index.html  scratchpad.cpp
static/: loadanim_final.bk.json
tests/: objects.test.ts  scratchpad.ts  tasks.test.js  tasks.test.ts  widgets.test.ts
wasm/: README.md
(+3176 files in other folders)
